--- a/administrator/components/com_mybooks/models/forms/filter_books.xml
+++ b/administrator/components/com_mybooks/models/forms/filter_books.xml
@@ -74,8 +74,8 @@
 			<option value="b.published DESC">JSTATUS_DESC</option>
 			<option value="b.title ASC">COM_MYBOOKS_TITLE_ASC</option>
 			<option value="b.title DESC">COM_MYBOOKS_TITLE_DESC</option>
-			<option value="user ASC">JAUTHOR_ASC</option>
-			<option value="user DESC">JAUTHOR_DESC</option>
+			<option value="creator ASC">COM_MYBOOKS_CREATOR_ASC</option>
+			<option value="creator DESC">COM_MYBOOKS_CREATOR_DESC</option>
 			<option value="b.created ASC">JDATE_ASC</option>
 			<option value="b.created DESC">JDATE_DESC</option>
 			<option value="b.id ASC">JGRID_HEADING_ID_ASC</option>
